--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,10 @@
 {
     "name": "vee-dee-oh",
-    "version": "0.0.0",
+    "version": "0.0.2",
+    "authors": "José Pedro Dias <jose.pedro.dias@gmail.com>",
     "description": "video element abstraction",
     "license": "MIT",
+    "homepage": "http://josepedrodias.github.io/vee-dee-oh/index.html",
     "main": "src/vee-dee-oh.html",
     "keywords": [
         "web-components",
